<resources>
    <string name="app_name">My Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="bottom_navigation_income_title">Доход</string>

    <string name="fragment_operations_label">Все операции</string>
    <string name="fragment_operation_detail_label">Операция</string>
    <string name="fragment_categories_label">Все категории</string>
    <string name="fragment_category_detail_label">Категория</string>

    <string name="fragment_operations_bottom_nav_label">Операции</string>
    <string name="fragment_categories_bottom_nav_label">Категории</string>

    <string name="item_operation_image_default_label">Пустое изображение проведенной операции</string>
    <string name="item_operation_amount_income">+%s</string>
    <string name="item_operation_amount_expense">-%s</string>

    <string name="operation_title">Редактирование операции</string>
    <string name="operation_name_label">Название</string>
    <string name="operation_date_label">Дата операции</string>
    <string name="operation_amount_label">Сумма операции</string>
    <string name="operation_amount_symbol">&#8381;</string>
    <string name="operation_category_label">Категория</string>
    <string name="operation_action_save_label">Сохранить</string>

    <string name="categories_action_create_label">Создать</string>
    <string name="categories_action_content_description">Кнопка создания новой категории</string>

    <string name="operations_action_add_label">Добавить</string>
    <string name="operations_action_add_content_description">Кнопка добавления операции</string>

    <string name="category_edit_title">Редактирование категории</string>
    <string name="category_create_title">Создание категории</string>
    <string name="category_name_label">Название</string>
    <string name="category_type_label">Тип</string>
    <string name="category_action_save_label">Сохранить</string>

    <string name="input_field_is_not_filled">Поле не заполнено</string>

    <string name="category_type_income">Доход</string>
    <string name="category_type_expense">Расход</string>
</resources>
