<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/operationsFragment">
    <fragment
        android:id="@+id/operationsFragment"
        android:name="ru.kapitoxa.mywallet.operations.OperationsFragment"
        android:label="@string/fragment_operations_label"
        tools:layout="@layout/fragment_operations">
        <action
            android:id="@+id/action_operationsFragment_to_detailFragment"
            app:destination="@id/operationDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/operationDetailFragment"
        android:name="ru.kapitoxa.mywallet.operationdetail.OperationDetailFragment"
        android:label="@string/fragment_operation_detail_label"
        tools:layout="@layout/fragment_operation_detail">
        <action
            android:id="@+id/action_operationDetailFragment_to_operationsFragment"
            app:destination="@id/operationsFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/operationsFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="operation"
            app:argType="ru.kapitoxa.mywallet.database.Operation" />
    </fragment>
    <fragment
        android:id="@+id/categoryDetailFragment"
        android:name="ru.kapitoxa.mywallet.categorydetail.CategoryDetailFragment"
        android:label="@string/fragment_category_detail_label"
        tools:layout="@layout/fragment_category_detail">
        <argument
            android:name="category"
            app:argType="ru.kapitoxa.mywallet.database.Category" />
        <action
            android:id="@+id/action_categoryDetailFragment_to_categoriesFragment"
            app:destination="@id/categoriesFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@id/categoriesFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/categoriesFragment"
        android:name="ru.kapitoxa.mywallet.categories.CategoriesFragment"
        android:label="@string/fragment_categories_label"
        tools:layout="@layout/fragment_categories">
        <action
            android:id="@+id/action_categoriesFragment_to_categoryDetailFragment"
            app:destination="@id/categoryDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
</navigation>